'Fixed-readability-on-Android-screens'

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 .head{
     text-shadow:4px 4px 10px rgba(0, 0, 0, 0.585);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color:white;
 }
 
@@ -25,29 +25,34 @@
     border:2px solid rgba(0, 0, 0, 0.25);
     box-shadow:4px 4px 5px rgba(0, 0, 0, 0.5);
     border-radius:20px;
-    font-family: cursive;
+    font-family:'Courier New', Courier, monospace;
     height: fit-content;
     padding:15px;
     display:inline-block;
-    
-    
-    
+    width: fit-content;
 }
 
 p{
     padding: 1em;
     font-size:1em;
-    font-family: cursive;
+    font-family:'Courier New', Courier, monospace;
     color: white;
-}   
+} 
 
 .alpha-flex{
     display:inline-block;
     width: 320px;
+}
     
 
-    
+@media (max-width: 720px){
+    .alpha-flex {
+        width:100%;
+        display:block;
+    }
 }
+    
+
 div{
     margin: 2.5px;
     color:white;
@@ -61,8 +66,10 @@ padding:10%
 
 .beta{
     background-color: rgba(0, 0, 0, 0.75);
+    width: fit-content;
 }
 
-img{
-    border-radius:20px;
+img{ border-radius:20px;
+    max-width: 320px;
 }
+
